--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -52,6 +52,7 @@
     cursor: pointer;
     font-family: 'Plus Jakarta Sans', Arial, sans-serif;
     font-size: 14px;
+    text-decoration: none;
 }
 
 .register-btn {
@@ -63,6 +64,7 @@
     cursor: pointer;
     font-family: 'Plus Jakarta Sans', Arial, sans-serif;
     font-size: 14px;
+    text-decoration: none;
 }
 .header {
     position: relative;
@@ -266,6 +268,7 @@
     backdrop-filter: blur(5px);
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.15);
     border: 1px solid rgba(255, 255, 255, 0.3);
+    text-decoration: none;
 }
 
 .role-btn:hover {
@@ -1198,6 +1201,7 @@ font-size: 16px;
 font-weight: 500;
 cursor: pointer;
 transition: all 0.3s ease;
+text-decoration: none;
 }
 
 .get-points-btn:hover {
