--- a/public/css/program.css
+++ b/public/css/program.css
@@ -52,6 +52,7 @@
     cursor: pointer;
     font-family: 'Plus Jakarta Sans', sans-serif;
     font-size: 14px;
+    text-decoration: none;
 }
 
 .register-btn {
@@ -63,7 +64,9 @@
     cursor: pointer;
     font-family: 'Plus Jakarta Sans', sans-serif;
     font-size: 14px;
+    text-decoration: none;
 }
+
 .footer {
     background: linear-gradient(180deg, rgba(124, 210, 247, 0.9) 0%, rgba(123, 158, 243, 0.9) 100%);
     border-radius: 40px 40px 0 0;
